bitwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      protocol: TCP
